[gd_scene load_steps=8 format=2]

[ext_resource path="res://actors/items/rotating_block/orange/block_center.png" type="Texture" id=1]
[ext_resource path="res://actors/items/rotating_block/orange/block_middle.png" type="Texture" id=2]
[ext_resource path="res://actors/items/rotating_block/orange/block_side.png" type="Texture" id=3]
[ext_resource path="res://actors/items/rotating_block/orange/block_top.png" type="Texture" id=4]
[ext_resource path="res://actors/items/rotating_block/orange/block_corner.png" type="Texture" id=5]
[ext_resource path="res://actors/items/rotating_block/rotating_block.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
resource_local_to_scene = true
extents = Vector2( 32, 32 )

[node name="RotatingBlock" type="StaticBody2D"]
rotation = 3.14159
script = ExtResource( 6 )

[node name="Middle" type="TextureRect" parent="."]
margin_left = -28.0
margin_top = -28.0
margin_right = 28.0
margin_bottom = 28.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="TextureRect" parent="."]
margin_left = -32.0
margin_top = -28.0
margin_right = -28.0
margin_bottom = 28.0
texture = ExtResource( 3 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="TextureRect" parent="."]
margin_left = 28.0
margin_top = -28.0
margin_right = 32.0
margin_bottom = 28.0
texture = ExtResource( 3 )
stretch_mode = 2
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top" type="TextureRect" parent="."]
margin_left = -28.0
margin_top = -32.0
margin_right = 28.0
margin_bottom = -28.0
texture = ExtResource( 4 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bottom" type="TextureRect" parent="."]
margin_left = -28.0
margin_top = 28.0
margin_right = 28.0
margin_bottom = 32.0
texture = ExtResource( 4 )
stretch_mode = 2
flip_v = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CornerTL" type="Sprite" parent="."]
position = Vector2( -30, -30 )
texture = ExtResource( 5 )

[node name="CornerTR" type="Sprite" parent="."]
position = Vector2( 30, -30 )
texture = ExtResource( 5 )
flip_h = true

[node name="CornerBL" type="Sprite" parent="."]
position = Vector2( -30, 30 )
texture = ExtResource( 5 )
flip_v = true

[node name="CornerBR" type="Sprite" parent="."]
position = Vector2( 30, 30 )
texture = ExtResource( 5 )
flip_h = true
flip_v = true

[node name="Center" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )
